--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,7 +28,7 @@ jobs:
         cache: maven
 
     - name: Build Application JAR
-      working-directory: rest-with-springboot-and-java
+      working-directory: ./rest-springboot-docker
       run: mvn clean package -DskipTests
 
     - name: Docker Compose Build
