--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,7 @@ jobs:
         cache: maven
 
     - name: Build Application JAR
+      working-directory: /rest-with-springboot-and-java 
       run: mvn clean package -DskipTests
 
     - name: Docker Compose Build
