--- a/rest-with-springboot-and-java/src/main/resources/application.yml
+++ b/rest-with-springboot-and-java/src/main/resources/application.yml
@@ -13,9 +13,9 @@ security:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/rest_with_springboot_matheus?useTimezone=true&serverTimezone=UTC
-    username: root
-    password: root
+    url: jdbc:mysql://rest-with-springboot-matheus.c9wwi000gdjj.sa-east-1.rds.amazonaws.com:3306/rest_with_springboot_matheus?useTimezone=true&serverTimezone=UTC
+    username: docker
+    password: admin123
   jpa:
     hibernate:
       ddl-auto: none
